# canario

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  CONTRIBUTING.md  Dockerfile  README.md  REUSE.toml  Taskfile.yaml  Taskfile.yml  justfile  mkdocs.yml  poetry.just  pre-commit.just  project.just  pyproject.toml  requirements-app.in  requirements-app.in.txt  requirements-dev.in  requirements-dev.in.txt  requirements-dev.txt  requirements-developer.txt  requirements-env-dev.txt  requirements-test.in.txt  requirements.txt  trivy.just  trivy.yaml
.devcontainer/: bootstrap.sh  devcontainer.dockerfile  devcontainer.env  devcontainer.json  install-just.sh  install-trivy.sh
.python-requirements/: docs.in
.reuse/: dep5
containers/: mod.just  poetry-runner.dockerfile
docs/: Taskfile.yml  api.md  contributing.md  index.md  license.md  mod.just
src/canario/: __init__.py  __main__.py  cli.py  config.py  log_util.py  runner.py
tasks/console/uv/: Taskfile.yaml
tasks/containers/: Taskfile.yaml
tasks/mkdocs/: Taskfile.yaml
tasks/project/: Taskfile.yaml
tasks/pytest/: Taskfile.yaml
tasks/python-ruff/: Taskfile.yaml
tasks/python-testing/: Taskfile.yaml
tasks/ruff/: Taskfile.yaml
tasks/uv/: Taskfile.yaml
tasks/uv-developer/: Taskfile.yaml
tests/: __init__.py  test_cli.py
